--- a/Controls/PersonStripe.xaml
+++ b/Controls/PersonStripe.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:viewModel="clr-namespace:Draftor.ViewModels"
              xmlns:controls="clr-namespace:Draftor.Controls"
              x:Class="Draftor.Controls.PersonStripe"
@@ -52,7 +53,7 @@
                        BackgroundColor="{StaticResource Red}"
                        Clicked="Delete_Clicked" />
         </SwipeView.LeftItems>
-        <Border BackgroundColor="{DynamicResource PrimaryColor}"
+        <Border BackgroundColor="{toolkit:AppThemeResource PrimaryColor}"
                 Style="{StaticResource HorizontalBorder}">
             <Border.GestureRecognizers>
                 <TapGestureRecognizer NumberOfTapsRequired="1"
