--- a/Resources/Styles/Colors.xaml
+++ b/Resources/Styles/Colors.xaml
@@ -2,9 +2,39 @@
 <?xaml-comp compile="true" ?>
 <ResourceDictionary 
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit">
 
-    <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
+    <toolkit:AppThemeColor Light="#cdd2d2"
+                           Dark="#071E22"
+                           x:Key="PageBackgroundColor" />
+    <toolkit:AppThemeColor Light="#21457a"
+                           Dark="#21457a"
+                           x:Key="TopBarColor" />
+    <toolkit:AppThemeColor Light="#26508e"
+                           Dark="#26508e"
+                           x:Key="BottomBarColor" />
+    <toolkit:AppThemeColor Light="#0081A7"
+                           Dark="#0081A7"
+                           x:Key="PrimaryColor" />
+    <toolkit:AppThemeColor Light="#4CA6C1"
+                           Dark="#38A0B2"
+                           x:Key="SecondaryColor" />
+    <toolkit:AppThemeColor Light="Black"
+                           Dark="White"
+                           x:Key="PrimaryTextColor" />
+    <toolkit:AppThemeColor Light="Black"
+                           Dark="WhiteSmoke"
+                           x:Key="SecondaryTextColor" />
+    <toolkit:AppThemeColor Light="#333333"
+                           Dark="Gray"
+                           x:Key="TertiaryTextColor" />
+    <toolkit:AppThemeColor Light="#C8C8C8"
+                           Dark="#141414"
+                           x:Key="DisabledColor" />
+    <toolkit:AppThemeColor Light="#737577"
+                           Dark="#DADBDD"
+                           x:Key="DisabledTextColor" />
 
     <Color x:Key="Primary">#502419</Color>
     <Color x:Key="PrimaryDark">#ac99ea</Color>
