<perf> improve loading people's vm's

--- a/Views/Main/MainView.xaml
+++ b/Views/Main/MainView.xaml
@@ -63,19 +63,17 @@
             </Grid>
             <RefreshView IsRefreshing="{Binding IsRefreshing, Mode=TwoWay}"
                          Command="{Binding RefreshCommand}">
-                <CollectionView ItemsSource="{Binding People}"
+                <CollectionView ItemsSource="{Binding People, Mode=TwoWay}"
                                 SelectionMode="None"
                                 BackgroundColor="Transparent"
                                 HorizontalOptions="FillAndExpand"
                                 VerticalOptions="FillAndExpand">
                     <CollectionView.ItemTemplate>
                         <DataTemplate x:DataType="{x:Type viewModel:PersonMainVM}">
-
                             <controls:PersonStripe BindingContext="{Binding}"
-                                                   DeleteCommand="{Binding BindingContext.DeletePersonCommand, Source={x:Reference HomeView}}"
-                                                   DetailsCommand="{Binding BindingContext.NavigateToPersonDetailsCommand, Source={x:Reference HomeView}}"
-                                                   HeightRequest="70" />
-
+                                                       DeleteCommand="{Binding BindingContext.DeletePersonCommand, Source={x:Reference HomeView}}"
+                                                       DetailsCommand="{Binding BindingContext.NavigateToPersonDetailsCommand, Source={x:Reference HomeView}}"
+                                                       HeightRequest="70" />
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
