--- a/Views/Actions/PersonView.xaml
+++ b/Views/Actions/PersonView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Draftor.Views.Actions.PersonView"
              xmlns:context="clr-namespace:Draftor.BindingContexts"
-             xmlns:viewModel="clr-namespace:Draftor.ViewModels"
+             xmlns:viewModel="clr-namespace:Draftor.BindableViewModels"
              xmlns:converter="clr-namespace:Draftor.Converters"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:controls="clr-namespace:Draftor.Controls"
@@ -52,7 +52,7 @@
                           VerticalOptions="Fill"
                           Margin="5,5">
                     <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="viewModel:TransactionForListVM">
+                        <DataTemplate x:DataType="viewModel:TransactionBindableVM">
                             <ViewCell>
                                 <SwipeView Margin="5">
                                     <SwipeView.Triggers>
