--- a/Views/Controls/PersonDetailsCard.xaml
+++ b/Views/Controls/PersonDetailsCard.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewModel="clr-namespace:Draftor.ViewModels"
+             xmlns:viewModel="clr-namespace:Draftor.Core.ViewModels;assembly=Draftor.Core"
              x:Class="Draftor.Controls.PersonDetailsCard"
              x:Name="personDetails">
     <Grid RowDefinitions="auto,auto,auto,auto">
