--- a/Views/Controls/PersonStripe.xaml
+++ b/Views/Controls/PersonStripe.xaml
@@ -2,7 +2,7 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             xmlns:viewModel="clr-namespace:Draftor.ViewModels"
+             xmlns:viewModel="clr-namespace:Draftor.Core.ViewModels;assembly=Draftor.Core"
              xmlns:controls="clr-namespace:Draftor.Controls"
              x:Class="Draftor.Controls.PersonStripe"
              x:DataType="viewModel:PersonMainVM"
