--- a/Views/Main/MainView.xaml
+++ b/Views/Main/MainView.xaml
@@ -3,13 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Draftor.Views.Main.MainView"
              xmlns:context="clr-namespace:Draftor.BindingContexts"
-             xmlns:viewModel="clr-namespace:Draftor.ViewModels"
+             xmlns:viewModel="clr-namespace:Draftor.Core.ViewModels;assembly=Draftor.Core"
              xmlns:converter="clr-namespace:Draftor.Converters"
              xmlns:controls="clr-namespace:Draftor.Controls"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             Appearing="PeopleView_Appearing"
              x:Name="HomeView"
              x:DataType="context:MainDataContext">
+    <ContentPage.Behaviors>
+        <toolkit:EventToCommandBehavior EventName="NavigatedTo"
+                                        Command="{Binding RefreshCommand}" />
+    </ContentPage.Behaviors>
     <ContentPage.Resources>
         <converter:TotalToIntConverter x:Key="TotalToIntConverter" />
     </ContentPage.Resources>
