--- a/Draftor/Views/Actions/AddTransactionView.xaml
+++ b/Draftor/Views/Actions/AddTransactionView.xaml
@@ -14,120 +14,128 @@
     <ContentPage.Resources>
         <converter:TotalToIntConverter x:Key="TotalToIntConverter" />
     </ContentPage.Resources>
+    <ContentPage.Behaviors>
+        <toolkit:EventToCommandBehavior EventName="NavigatedTo"
+                                        Command="{Binding LoadDataCommand}" />
+    </ContentPage.Behaviors>
     <ContentPage.Content>
-        <Grid RowDefinitions="auto,auto,auto,auto,auto,*,auto">
-            <Frame Margin="5"
-                    Grid.Row="0"
-                   BackgroundColor="{toolkit:AppThemeResource PrimaryColor}"
-                   Opacity="0.95"
-                   CornerRadius="25"
-                   HeightRequest="100"
-                   HorizontalOptions="FillAndExpand"
-                   VerticalOptions="FillAndExpand">
-                <FlexLayout Direction="Row"
-                            AlignItems="Center"
-                            JustifyContent="SpaceBetween">
-                    <Label Text="{Binding Sign}"
-                           FontAttributes="Bold"
-                           FontSize="Large"
-                           Margin="20,5,30,5"
-                           BackgroundColor="{toolkit:AppThemeResource PrimaryColor}">
-                        <Label.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding SwitchSignCommand}" />
-                        </Label.GestureRecognizers>
-                        <Label.Triggers>
-                            <DataTrigger TargetType="Label"
-                                         Binding="{Binding Sign}"
-                                         Value="+">
-                                <Setter Property="TextColor"
-                                        Value="LightGreen" />
-                            </DataTrigger>
-                            <DataTrigger TargetType="Label"
-                                         Binding="{Binding Sign}"
-                                         Value="-">
-                                <Setter Property="TextColor"
-                                        Value="OrangeRed" />
-                            </DataTrigger>
-                        </Label.Triggers>
-                    </Label>
-                    <Entry Text="{Binding Ammount, Mode=TwoWay}"
-                           FontSize="Title"
+        <AbsoluteLayout>
+            <Grid AbsoluteLayout.LayoutBounds="0,0,1,1"
+                  AbsoluteLayout.LayoutFlags="All"
+                  RowDefinitions="auto,auto,auto,auto,auto,*,auto">
+                <Frame Margin="5"
+                       Grid.Row="0"
+                       BackgroundColor="{toolkit:AppThemeResource PrimaryColor}"
+                       CornerRadius="25"
+                       HeightRequest="100"
+                       HorizontalOptions="FillAndExpand"
+                       VerticalOptions="FillAndExpand">
+                    <FlexLayout Direction="Row"
+                                AlignItems="Center"
+                                JustifyContent="SpaceBetween">
+                        <Label Text="{Binding Sign}"
+                               FontAttributes="Bold"
+                               FontSize="Large"
+                               Margin="20,5,30,5"
+                               BackgroundColor="{toolkit:AppThemeResource PrimaryColor}">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding SwitchSignCommand}" />
+                            </Label.GestureRecognizers>
+                            <Label.Triggers>
+                                <DataTrigger TargetType="Label"
+                                             Binding="{Binding Sign}"
+                                             Value="+">
+                                    <Setter Property="TextColor"
+                                            Value="LightGreen" />
+                                </DataTrigger>
+                                <DataTrigger TargetType="Label"
+                                             Binding="{Binding Sign}"
+                                             Value="-">
+                                    <Setter Property="TextColor"
+                                            Value="OrangeRed" />
+                                </DataTrigger>
+                            </Label.Triggers>
+                        </Label>
+                        <Entry Text="{Binding Ammount, Mode=TwoWay}"
+                               FontSize="Title"
+                               HorizontalTextAlignment="Center"
+                               VerticalTextAlignment="Center"
+                               HorizontalOptions="CenterAndExpand"
+                               VerticalOptions="CenterAndExpand"
+                               Margin="5,5,20,5"
+                               MaxLength="8"
+                               Keyboard="Numeric"
+                               Placeholder="e.g. 123.45">
+                            <Entry.Triggers>
+                                <DataTrigger TargetType="Entry"
+                                             Binding="{Binding Sign}"
+                                             Value="+">
+                                    <Setter Property="TextColor"
+                                            Value="LightGreen" />
+                                </DataTrigger>
+                                <DataTrigger TargetType="Entry"
+                                             Binding="{Binding Sign}"
+                                             Value="-">
+                                    <Setter Property="TextColor"
+                                            Value="OrangeRed" />
+                                </DataTrigger>
+                            </Entry.Triggers>
+                            <Entry.Behaviors>
+                                <behaviors:NumericValidationBehavior />
+                            </Entry.Behaviors>
+                        </Entry>
+                    </FlexLayout>
+                </Frame>
+                <Label Grid.Row="1"
+                       FontSize="Medium"
+                       Margin="5,0,0,0"
+                       Text="Title" />
+                <Entry Grid.Row="2"
+                       HorizontalOptions="Fill"
+                       Placeholder="Groceries"
+                       Text="{Binding Title, Mode=TwoWay}" />
+                <Label Grid.Row="3"
+                       FontSize="Medium"
+                       Margin="5,0,0,0"
+                       Text="Description" />
+                <Editor Grid.Row="4"
+                        HorizontalOptions="Fill"
+                        Placeholder="2 bananas, 1 apple and milk (lots of) ..."
+                        Text="{Binding Description, Mode=TwoWay}" />
+                <Grid Grid.Row="5"
+                      HorizontalOptions="Fill"
+                      VerticalOptions="Fill"
+                      RowDefinitions="auto,*"
+                      ColumnDefinitions="*,auto,*">
+                    <Label Grid.Row="0"
+                           Grid.Column="0"
+                           Text="People"
                            HorizontalTextAlignment="Center"
                            VerticalTextAlignment="Center"
-                           HorizontalOptions="CenterAndExpand"
-                           VerticalOptions="CenterAndExpand"
-                           Margin="5,5,20,5"
-                           Keyboard="Numeric"
-                           Placeholder="e.g. 123.45">
-                        <Entry.Triggers>
-                            <DataTrigger TargetType="Entry"
-                                         Binding="{Binding Sign}"
-                                         Value="+">
-                                <Setter Property="TextColor"
-                                        Value="LightGreen" />
-                            </DataTrigger>
-                            <DataTrigger TargetType="Entry"
-                                         Binding="{Binding Sign}"
-                                         Value="-">
-                                <Setter Property="TextColor"
-                                        Value="OrangeRed" />
-                            </DataTrigger>
-                        </Entry.Triggers>
-                        <Entry.Behaviors>
-                            <behaviors:NumericValidationBehavior />
-                        </Entry.Behaviors>
-                    </Entry>
-                </FlexLayout>
-            </Frame>
-            <Label Grid.Row="1"
-                   FontSize="Medium"
-                   Margin="5,0,0,0"
-                   Text="Title" />
-            <Entry Grid.Row="2"
-                   HorizontalOptions="Fill"
-                   Placeholder="Groceries"
-                   Text="{Binding Title, Mode=TwoWay}" />
-            <Label Grid.Row="3"
-                   FontSize="Medium"
-                   Margin="5,0,0,0"
-                   Text="Description" />
-            <Editor Grid.Row="4"
-                    HorizontalOptions="Fill"
-                    Placeholder="2 bananas, 1 apple and milk (lots of) ..."
-                    Text="{Binding Description, Mode=TwoWay}" />
-            <Grid Grid.Row="5"
-                  HorizontalOptions="Fill"
-                  VerticalOptions="Fill"
-                  RowDefinitions="auto,*"
-                  ColumnDefinitions="*,auto,*">
-                <Label Grid.Row="0"
-                       Grid.Column="0"
-                       Text="People"
-                       HorizontalTextAlignment="Center"
-                       VerticalTextAlignment="Center"
-                       FontSize="Medium" />
-                <Label Grid.Row="0"
-                       Grid.Column="2"
-                       Text="Groups"
-                       HorizontalTextAlignment="Center"
-                       VerticalTextAlignment="Center"
-                       FontSize="Medium" />
-                <BoxView WidthRequest="1"
-                         Color="{StaticResource AccentColor}"
-                         Grid.Column="1"
-                         Grid.RowSpan="2"
-                         Grid.Row="0"
-                         Margin="0,20,0,10" />
-                <RefreshView IsRefreshing="{Binding ArePeopleLoading}"
-                             Grid.Row="1"
-                             Grid.Column="0">
-                    <CollectionView ItemsSource="{Binding People}">
+                           FontSize="Medium" />
+                    <Label Grid.Row="0"
+                           Grid.Column="2"
+                           Text="Groups"
+                           HorizontalTextAlignment="Center"
+                           VerticalTextAlignment="Center"
+                           FontSize="Medium" />
+                    <BoxView WidthRequest="1"
+                             Color="{StaticResource AccentColor}"
+                             Grid.Column="1"
+                             Grid.RowSpan="2"
+                             Grid.Row="0"
+                             Margin="0,20,0,10" />
+                    <CollectionView Grid.Row="1"
+                              Grid.Column="0"
+                              HorizontalOptions="Fill"
+                              Margin="5"
+                              ItemsSource="{Binding People}">
                         <CollectionView.ItemTemplate>
                             <DataTemplate x:DataType="viewModel:PersonForListVM">
                                 <StackLayout Orientation="Horizontal"
+                                             HeightRequest="50"
                                              VerticalOptions="Center"
-                                             HorizontalOptions="Fill"
-                                             HeightRequest="50">
+                                             HorizontalOptions="Fill">
                                     <CheckBox IsChecked="{Binding Checked, Mode=TwoWay}"
                                               VerticalOptions="Center"
                                               HorizontalOptions="Start">
@@ -140,18 +148,25 @@
                                     <Label Text="{Binding Name}"
                                            FontSize="Medium"
                                            VerticalOptions="Center"
-                                           HorizontalOptions="Fill" />
+                                           HorizontalOptions="StartAndExpand"
+                                           LineBreakMode="TailTruncation" />
                                 </StackLayout>
                             </DataTemplate>
                         </CollectionView.ItemTemplate>
                     </CollectionView>
-                </RefreshView>
+                </Grid>
+                <Button Grid.Row="6"
+                        Text="Add"
+                        HorizontalOptions="End"
+                        Margin="10"
+                        Command="{Binding AddTransactionCommand}" />
             </Grid>
-            <Button Grid.Row="6"
-                    Text="Add"
-                    HorizontalOptions="End"
-                    Margin="10"
-                    Command="{Binding AddTransactionCommand}" />
-        </Grid>
+            <ActivityIndicator AbsoluteLayout.LayoutBounds="0,0,1,1"
+                               AbsoluteLayout.LayoutFlags="All"
+                               IsVisible="{Binding IsDataBeingLoaded}"
+                               IsRunning="True"
+                               HorizontalOptions="CenterAndExpand"
+                               VerticalOptions="CenterAndExpand" />
+        </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
