--- a/Draftor/Platforms/Windows/App.xaml
+++ b/Draftor/Platforms/Windows/App.xaml
@@ -1,8 +1,6 @@
-﻿<maui:MauiWinUIApplication
-    x:Class="Draftor.WinUI.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:Draftor.WinUI">
-
+﻿<maui:MauiWinUIApplication x:Class="Draftor.WinUI.App"
+                           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                           xmlns:maui="using:Microsoft.Maui"
+                           xmlns:local="using:Draftor.WinUI">
 </maui:MauiWinUIApplication>
