--- a/Draftor/Resources/Styles/Colors.xaml
+++ b/Draftor/Resources/Styles/Colors.xaml
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <?xaml-comp compile="true" ?>
-<ResourceDictionary 
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit">
+<ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit">
 
     <toolkit:AppThemeColor Light="#cdd2d2"
                            Dark="#071E22"
@@ -71,19 +70,32 @@
     <Color x:Key="Accent200">#f476ed</Color>
     <Color x:Key="Accent100">#f9b1f3</Color>
     <Color x:Key="Accent50">#fee0fb</Color>
-    
-    <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}"/>
-    <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}"/>
-    <SolidColorBrush x:Key="TertiaryBrush" Color="{StaticResource Tertiary}"/>
-    <SolidColorBrush x:Key="WhiteBrush" Color="{StaticResource White}"/>
-    <SolidColorBrush x:Key="BlackBrush" Color="{StaticResource Black}"/>
 
-    <SolidColorBrush x:Key="Gray100Brush" Color="{StaticResource Gray100}"/>
-    <SolidColorBrush x:Key="Gray200Brush" Color="{StaticResource Gray200}"/>
-    <SolidColorBrush x:Key="Gray300Brush" Color="{StaticResource Gray300}"/>
-    <SolidColorBrush x:Key="Gray400Brush" Color="{StaticResource Gray400}"/>
-    <SolidColorBrush x:Key="Gray500Brush" Color="{StaticResource Gray500}"/>
-    <SolidColorBrush x:Key="Gray600Brush" Color="{StaticResource Gray600}"/>
-    <SolidColorBrush x:Key="Gray900Brush" Color="{StaticResource Gray900}"/>
-    <SolidColorBrush x:Key="Gray950Brush" Color="{StaticResource Gray950}"/>
+    <SolidColorBrush x:Key="PrimaryBrush"
+                     Color="{StaticResource Primary}" />
+    <SolidColorBrush x:Key="SecondaryBrush"
+                     Color="{StaticResource Secondary}" />
+    <SolidColorBrush x:Key="TertiaryBrush"
+                     Color="{StaticResource Tertiary}" />
+    <SolidColorBrush x:Key="WhiteBrush"
+                     Color="{StaticResource White}" />
+    <SolidColorBrush x:Key="BlackBrush"
+                     Color="{StaticResource Black}" />
+
+    <SolidColorBrush x:Key="Gray100Brush"
+                     Color="{StaticResource Gray100}" />
+    <SolidColorBrush x:Key="Gray200Brush"
+                     Color="{StaticResource Gray200}" />
+    <SolidColorBrush x:Key="Gray300Brush"
+                     Color="{StaticResource Gray300}" />
+    <SolidColorBrush x:Key="Gray400Brush"
+                     Color="{StaticResource Gray400}" />
+    <SolidColorBrush x:Key="Gray500Brush"
+                     Color="{StaticResource Gray500}" />
+    <SolidColorBrush x:Key="Gray600Brush"
+                     Color="{StaticResource Gray600}" />
+    <SolidColorBrush x:Key="Gray900Brush"
+                     Color="{StaticResource Gray900}" />
+    <SolidColorBrush x:Key="Gray950Brush"
+                     Color="{StaticResource Gray950}" />
 </ResourceDictionary>
