--- a/Draftor/Views/Actions/AddTransactionView.xaml
+++ b/Draftor/Views/Actions/AddTransactionView.xaml
@@ -13,6 +13,7 @@
              Shell.TabBarIsVisible="False">
     <ContentPage.Resources>
         <converter:TotalToIntConverter x:Key="TotalToIntConverter" />
+        <converter:DoubleToTextConverter x:Key="TexToDoubleConverter" />
     </ContentPage.Resources>
     <ContentPage.Behaviors>
         <toolkit:EventToCommandBehavior EventName="NavigatedTo"
@@ -33,30 +34,35 @@
                     <FlexLayout Direction="Row"
                                 AlignItems="Center"
                                 JustifyContent="SpaceBetween">
-                        <Label Text="{Binding Sign}"
-                               FontAttributes="Bold"
-                               FontSize="Large"
-                               Margin="20,5,30,5"
-                               BackgroundColor="{toolkit:AppThemeResource PrimaryColor}">
-                            <Label.GestureRecognizers>
+                        <Frame Margin="20,5,30,5"
+                               BackgroundColor="Transparent"
+                               HeightRequest="100"
+                               HorizontalOptions="CenterAndExpand"
+                               VerticalOptions="CenterAndExpand">
+                            <Frame.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding SwitchSignCommand}" />
-                            </Label.GestureRecognizers>
-                            <Label.Triggers>
-                                <DataTrigger TargetType="Label"
-                                             Binding="{Binding Sign}"
-                                             Value="+">
-                                    <Setter Property="TextColor"
-                                            Value="LightGreen" />
-                                </DataTrigger>
-                                <DataTrigger TargetType="Label"
-                                             Binding="{Binding Sign}"
-                                             Value="-">
-                                    <Setter Property="TextColor"
-                                            Value="OrangeRed" />
-                                </DataTrigger>
-                            </Label.Triggers>
-                        </Label>
-                        <Entry Text="{Binding Ammount, Mode=TwoWay}"
+                            </Frame.GestureRecognizers>
+                            <Label Text="{Binding Sign}"
+                                   FontAttributes="Bold"
+                                   VerticalOptions="CenterAndExpand"
+                                   FontSize="Large">
+                                <Label.Triggers>
+                                    <DataTrigger TargetType="Label"
+                                                 Binding="{Binding Sign}"
+                                                 Value="+">
+                                        <Setter Property="TextColor"
+                                                Value="LightGreen" />
+                                    </DataTrigger>
+                                    <DataTrigger TargetType="Label"
+                                                 Binding="{Binding Sign}"
+                                                 Value="-">
+                                        <Setter Property="TextColor"
+                                                Value="OrangeRed" />
+                                    </DataTrigger>
+                                </Label.Triggers>
+                            </Label>
+                        </Frame>
+                        <Entry Text="{Binding Ammount, Mode=TwoWay, Converter={StaticResource TexToDoubleConverter}}"
                                FontSize="Title"
                                HorizontalTextAlignment="Center"
                                VerticalTextAlignment="Center"
@@ -105,28 +111,13 @@
                 <Grid Grid.Row="5"
                       HorizontalOptions="Fill"
                       VerticalOptions="Fill"
-                      RowDefinitions="auto,*"
-                      ColumnDefinitions="*,auto,*">
+                      RowDefinitions="auto,*">
                     <Label Grid.Row="0"
-                           Grid.Column="0"
                            Text="People"
                            HorizontalTextAlignment="Center"
                            VerticalTextAlignment="Center"
                            FontSize="Medium" />
-                    <Label Grid.Row="0"
-                           Grid.Column="2"
-                           Text="Groups"
-                           HorizontalTextAlignment="Center"
-                           VerticalTextAlignment="Center"
-                           FontSize="Medium" />
-                    <BoxView WidthRequest="1"
-                             Color="{StaticResource AccentColor}"
-                             Grid.Column="1"
-                             Grid.RowSpan="2"
-                             Grid.Row="0"
-                             Margin="0,20,0,10" />
                     <CollectionView Grid.Row="1"
-                                    Grid.Column="0"
                                     HorizontalOptions="Fill"
                                     Margin="5"
                                     ItemsSource="{Binding People}">
